--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>taobao_basic_parent</module>
         <module>taobao_plat_parent</module>
         <module>taobao_zuul_server_9527</module>
+        <module>taobao_config_server_8848</module>
+        <module>taobao_product_parent</module>
     </modules>
 
     <properties>
