--- a/taobao_product_parent/taobao_product_service/pom.xml
+++ b/taobao_product_parent/taobao_product_service/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>taobao_product_service</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>cn.fs.taobao</groupId>
+            <artifactId>taobao_product_interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--springboot支持-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
