--- a/taobao_util_generator/pom.xml
+++ b/taobao_util_generator/pom.xml
@@ -3,35 +3,44 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>taobao_product_parent</artifactId>
+        <artifactId>taobao</artifactId>
         <groupId>cn.fs.taobao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>taobao_product_interface</artifactId>
+    <artifactId>taobao_util_generator</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>cn.fs.taobao</groupId>
-            <artifactId>taobao_basic_util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-
-        <!--不能全部引入mybatis-plus,这是要做数据操作,这里是不需要的,只需引入核心包解决错误而已-->
+        <!--mybatis-plus依赖:-->
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus</artifactId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <!--数据库的依赖-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <!--模板引擎-->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.0</version>
+        </dependency>
+
     </dependencies>
 
 
